added new endpoint to get dropdown data, adjusted event struct, adjusted db init process to be more readable, added global error handler
