# docs/swagger.yaml
@@ -1,5 +1,12 @@
 basePath: /api/v1
 definitions:
+  api.Dropdown:
+    properties:
+      key:
+        type: string
+      value:
+        type: string
+    type: object
   api.Event:
     properties:
       _id:
@@ -10,7 +17,9 @@ definitions:
         type: string
       date:
         type: string
-      name:
+      description:
+        type: string
+      type:
         type: string
     type: object
   controller.HttpResponse:
@@ -21,14 +30,83 @@ definitions:
       message:
         type: string
     type: object
-externalDocs:
-  description: OpenAPI
-  url: https://swagger.io/resources/open-api/
 info:
   contact: {}
   title: Expense Tracker API
   version: "1.0"
 paths:
+  /dropdown/expense:
+    get:
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/controller.HttpResponse'
+            - properties:
+                data:
+                  items:
+                    $ref: '#/definitions/api.Dropdown'
+                  type: array
+              type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/controller.HttpResponse'
+      tags:
+      - category
+  /dropdown/income:
+    get:
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/controller.HttpResponse'
+            - properties:
+                data:
+                  items:
+                    $ref: '#/definitions/api.Dropdown'
+                  type: array
+              type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/controller.HttpResponse'
+      tags:
+      - category
+  /dropdown/type:
+    get:
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/controller.HttpResponse'
+            - properties:
+                data:
+                  items:
+                    $ref: '#/definitions/api.Dropdown'
+                  type: array
+              type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/controller.HttpResponse'
+      tags:
+      - category
   /event:
     post:
       consumes:
@@ -55,6 +133,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/controller.HttpResponse'
+      tags:
+      - event
   /event/filter:
     post:
       consumes:
@@ -89,6 +169,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/controller.HttpResponse'
+      tags:
+      - event
   /ping:
     get:
       consumes:
