# main.go
@@ -4,24 +4,40 @@ import (
 	"expense-tracker/docs"
 	"expense-tracker/internal/api"
 	"expense-tracker/internal/controller"
+	"net/http"
 
 	"github.com/gin-gonic/gin"
 	swaggerfiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
 )
 
+func ErrorHandler() gin.HandlerFunc {
+	return func(c *gin.Context) {
+		c.Next()
+
+		if len(c.Errors) > 0 {
+			c.JSON(
+				http.StatusInternalServerError, 
+				controller.HttpResponse{
+					IsError: true, 
+					Message: "Uh oh! :( something unexpected happened", 
+					Data: nil},
+				)
+		}
+	}
+}
+
 // @title           Expense Tracker API
 // @version         1.0
 
 // @BasePath  /api/v1
-
-// @externalDocs.description  OpenAPI
-// @externalDocs.url          https://swagger.io/resources/open-api/
 func main() {
-	api.Init()
 	defer api.Disconnect()
 
 	r := gin.Default()
+	r.Use(gin.Recovery())
+	r.Use(ErrorHandler())
+
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerfiles.Handler))
 
 	docs.SwaggerInfo.BasePath = "/api/v1"
@@ -35,6 +51,12 @@ func main() {
 		{
 			event.POST("", controller.UpsertEvent)
 			event.POST("/filter", controller.GetEvent)
+		}
+		category := v1.Group("/dropdown")
+		{
+			category.GET("/type", controller.GetTypes)
+			category.GET("/expense", controller.GetExpenses)
+			category.GET("/income", controller.GetIncomes)
 		}
 	}
 
